SERVER-46386 Change MetadataManager::_findNewestOverlappingMetadata to work with refined shard keys